Add repository configuration

--- a/package.json
+++ b/package.json
@@ -8,4 +8,8 @@
       "nodeunit": "*"
     },
     "engines": { "node": ">= 0.6.0" }
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mirhampt/node-recaptcha.git"
+    }
 }
