--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "devDependencies": {
       "nodeunit": "*"
     },
-    "engines": { "node": ">= 0.6.0" }
+    "engines": { "node": ">= 0.6.0" },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/npm/npm.git"
+    }
 }
